# pcsc-cyberjack

./: .gitignore  Makefile.am  Makefile.cvs  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  gource.sh  ifd-cyberjack.spec  ifd-cyberjack.spec.in  libtool
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
cjeca32/: BDRReader.cpp  BDRReader.h  BaseCommunication.cpp  BaseReader.cpp  BaseReader.h  CCIDReader.cpp  CCIDReader.h  CGOReader.cpp  CGOReader.h  CPTReader.cpp  CPTReader.h  EC30Reader.cpp  EC30Reader.h  ECAReader.cpp  ECAReader.h  ECMReader.cpp  ECMReader.h  ECPReader.cpp  ECPReader.h  ECRReader.cpp  ECRReader.h  Makefile.am  PPAReader.cpp  PPAReader.h  Platform_unix.cpp  RFCReader.cpp  RFCReader.h  RFKReader.cpp  RFKReader.h  RFSReader.cpp  RFSReader.h  RFSoliReader.cpp  RFSoliReader.h  RFUReader.cpp  RFUReader.h  Reader.cpp  SECReader.cpp  SECReader.h  SHUReader.cpp  SHUReader.h  (+13 more)
cjeca32/ausb/: ausb11.c  ausb_libusb1.c  usbdev.c  usbdev_hal.c  usbdev_l.h  usbdev_libusb1.c
debian/: autoreconf.after  autoreconf.before  changelog  control  copyright  debhelper-build-stamp  docs  files  libifd-cyberjack6.dirs  libifd-cyberjack6.examples  libifd-cyberjack6.install  libifd-cyberjack6.manpages  libifd-cyberjack6.postinst.debhelper  libifd-cyberjack6.preinst.debhelper  libifd-cyberjack6.substvars  libifd-cyberjack6.udev  rules
debian/fxcyberjack/DEBIAN/: control  md5sums
debian/libifd-cyberjack6/DEBIAN/: conffiles  control  md5sums  postinst  preinst  shlibs
debian/libifd-cyberjack6/usr/lib/pcsc/drivers/libifd-cyberjack.bundle/Contents/: Info.plist
debian/libifd-cyberjack6/usr/lib/pcsc/drivers/libifd-cyberjack.bundle/Contents/Linux/: libifd-cyberjack.so.6.0.0
debian/libifd-cyberjack6/usr/share/doc/libifd-cyberjack6/examples/: cyberjack.conf.default
debian/tmp/usr/lib/pcsc/drivers/libifd-cyberjack.bundle/Contents/Linux/: libifd-cyberjack.so.6.0.0
doc/: Makefile.am  modify_pin_direct.cpp  verify_pin_direct.cpp  verifypin_ascii.c  verifypin_fpin2.c
etc/: Makefile.am  cyberjack.conf.default
ifd/: Info.plist.in  Makefile.am  ifd.cpp  ifd_special.cpp
include/: Makefile.am
include/driver/: Platform.h  Platform_unix.h  Reader.h  cjeca32.h
include/firmware/: eca_defines.h  eca_module_errors.h  memory_placements.h
include/macosx/: winscard.h
include/macosx/PCSC/: Makefile.am  ifdhandler.h  reader.h
libcyberjack/: Makefile.am  driver.hpp  driver_pcsc.cpp  libtest.cpp
libcyberjack/checksuite/: Makefile.am  checksuite.cpp  checksuite.h  cm_reader.cpp  cm_reader.h  cm_services.cpp
libcyberjack/libdialog/: Makefile.am
libcyberjack/libdialog/base/: Makefile.am
m4/: pcsc.m4
tools/: Makefile.am
tools/cjBingo/: cjBingo.h
tools/cjflash/: Makefile.am
